<resources>
    <string name="app_name">halo dunia</string>
    <string name="nama">Nama</string>
    <string name="usia">Usia</string>
    <string name="ulangi">Ulangi</string>
    <string name="simpan">Simpan</string>
    <string name="profil">Profil</string>
    <string name="hitung">Hitung</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="selesai">Selesai</string>
    <string name="toast">Toast</string>
    <string name="snack_bar">Snack Bar</string>
    <string name="dialog">Alert Dialog</string>
    <string name="notifikasi">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_satu">Fragment 1</string>
    <string name="fragment_dua">Fragment 2</string>
    <string name="fragment_tiga">Fragment 3</string>
</resources>