<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PesanActivity">

    <Button
        android:id="@+id/bt_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast"/>

    <Button
        android:id="@+id/bt_snack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snack_bar"/>

    <Button
        android:id="@+id/bt_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog"/>

    <Button
        android:id="@+id/bt_notifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifikasi"/>

</LinearLayout>